# Test_API

./: .env  pyproject.toml
apps/common/: apps.py  models.py  pagination.py  types.py  utils.py  validators.py
apps/products/: urls.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: product.py
apps/products/serializers/: __init__.py  product_create.py  product_list.py
apps/products/services/: __init__.py  product.py
apps/products/views/: __init__.py  add_product.py  product.py
apps/users/: apps.py  authentication.py  models.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/users/serializers/: __init__.py  user_create.py  user_detail.py  user_edit.py  user_list.py
apps/users/services/: __init__.py  user.py
apps/users/views/: __init__.py  user_me.py
config/: settings.py  urls.py
